fixed textTruncate bug in blog initially inactive News and Promotes tabs (if first visible textis empty)

--- a/css/custom.css
+++ b/css/custom.css
@@ -3713,6 +3713,7 @@ a.b-callback_footer:hover{
 }
 .b-review_blog{
     margin-top: 15px;
+    min-height: 35px;
     font-weight: 300;
 }
 .b-btn_blog{
